--- a/News.html
+++ b/News.html
@@ -103,11 +103,8 @@
                            <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                             <li class="submenu">
-                                    <a href="News.html">News</a>
-                                </li>
                                 <li class="submenu">
-				<a href=""> Conferences</a>
+				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -134,38 +131,38 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 20px">Online Training Courses</p>
+                    <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
-		     <div id="section1">
-                    <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> 
-		    </div>
-<!-- 			<hr> -->
+		     <!-- <div id="section1">
+                    <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
+		    <!-- </div> -->
+			<!-- <hr> -->
 		    <div id="section2">
-                    <p style="text-align: center;font-size: 20px">The First Course Session</p>
-                    <p style="text-indent:2em ">*Fully Homomorphic Encryption and Implementation (全同态加密及其应用课程)<a href="FHE syllabus.html">FHE Syllabus(课程安排)</a> <a href="image/FHE Training Course Registration Form-培训课程注册登记表.doc" download="FHE Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
-                    <p style="text-indent:2em ">*Lattice-based Cryptography and Implementation (格密码课程)<a href="PQC syllabus.html">PQC syllabus(课程安排)</a> <a href="image/PQC Training Course Registration Form-培训课程注册登记表.doc" download="PQC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
-                    <p style="text-indent:2em ">*Secure Multi-party Computation and Implementation (安全多方计算及其应用课程)<a href="SMPC syllabus.html">SMPC Syllabus(课程安排)</a> <a href="image/SMPC Training Course Registration Form-培训课程注册登记表.doc" download="SMPC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
-                    <p style="text-indent:2em ">*AI and Security (人工智能与安全课程)<a href="AI syllabus.html">AI and Security Syllabus(课程安排)</a> <a href="image/AIS Training Course Registration Form-培训课程注册登记表.doc" download="AIS Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册登记表)</a><br/>
+                    <p style="text-align: center;font-size: 20px"><!-- The --> </p>
+                    <p style="text-indent:2em ">*Fully <br/>
+                    <p style="text-indent:2em ">*Lattice-based <br/>
+                    <p style="text-indent:2em ">*Secure <br/>
+                    <p style="text-indent:2em ">*AI and Security <br/>
 		    </div>
-<!-- 			    <hr> -->
+			    <hr>
 		    <div id="footer1">
-                    <p style="text-align: center;font-size: 20px">The Second Course Session</p> 
-                    <p style="text-indent:2em ">*Differential Privacy (差分隐私及其应用课程) <a href="DP syllabus.html">Syllabus of Differential Privacy and Applications(课程安排)</a> <a href="image/DP Training Course Registration Form-培训课程注册登记表.doc" download="DP Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/> 
-                    <p style="text-indent:2em ">*Secure Computation (安全计算课程) <a href="SC syllabus.html">Syllabus of Secure Computation (课程安排)</a> <a href="image/SC Training Course Registration Form-培训课程注册登记表.doc" download="SC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-                    <p style="text-indent:2em ">*Blockchains and Applications (区块链及其应用课程)<a href="BL syllabus.html">Syllabus of Blockchains and Cryptocurrencies (课程安排)</a> <a href="image/BL Training Course Registration Form-培训课程注册登记表.doc" download="BL Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a><br/>
-                    <p style="text-indent:2em ">*Advanced Topics in Cryptography (密码前沿课程)<a href="ATC syllabus.html">Syllabus of Advanced Topics in Cryptography (课程安排)</a> <a href="image/ATC Training Course Registration Form-培训课程注册登记表.doc" download="ATC Training Course Registration Form-培训课程注册登记表.doc">Registration Form(注册表)</a> <br/>
-                    <!-- <p style="text-indent:2em ">*Trusted Computing<br/>  -->
+                    <p style="text-align: center;font-size: 20px"><!-- The --></p> 
+                    <p style="text-indent:2em ">*Differential Privacy <br/> 
+                    <p style="text-indent:2em ">*Secure Computation <br/>
+                    <p style="text-indent:2em ">*Blockchains and Applications <br/>
+                    <p style="text-indent:2em ">*Advanced Topics in Cryptography <br/>
+                    <p style="text-indent:2em ">*Trusted Computing<br/> 
 		    </div>
-<!-- 			    <hr> -->
+		    <!-- <hr> -->
 		    <div id="footer2">
-                <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/> 
-		    </div>
-		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
-        </div>
-<script type="text/javascript">
-function googleTranslateElementInit() {
-new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-}
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
-</body>
-</html>
+		                    <p style="text-indent:2em ">Online  <br/> 
+		    		    </div>
+		    		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
+		            </div>
+		    <script type="text/javascript">
+		    function googleTranslateElementInit() {
+		    new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+		    }
+		    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"> </script>
+		    </body>
+		    </html>
