--- a/CSAC-2020.html
+++ b/CSAC-2020.html
@@ -52,8 +52,11 @@
                     <ul class="nav navbar-nav navbar-center">
                         <li><a href="index.html">
                             <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                        <li class="submenu">
-				<a href=""> Conferences</a>
+                             <li class="submenu">
+                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -354,7 +357,6 @@
     addHandler(down2,"mouseout",()=>down2.style.border="");
     window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
 </script>
-<p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
 <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
