--- a/News.html
+++ b/News.html
@@ -35,48 +35,44 @@
 		}
 	#section1 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
 /* 		margin-top: 30px; */
 	}
 	#section2 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
 	}
 	#footer1 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
 	}
 	#footer2 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
 	}
@@ -134,7 +130,7 @@
             <div id = "introdution">
             <div class="introdution">
                 <div id="theme">
-                    <p style="text-align: center;font-size: 20px">Conferences</p>
+                    <p style="text-align: center;font-size: 20px"News</p>
 <!--                      <hr> -->
 		     <!-- <div id="section1">
                     <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
@@ -160,7 +156,6 @@
 		    <div id="footer2">
 		                    <p style="text-indent:2em ">Online  <br/> 
 		    		    </div>
-		    		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
 		            </div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
