--- a/QPQC Introduction.html
+++ b/QPQC Introduction.html
@@ -33,12 +33,11 @@
 		}
 		#footer {
 	                background-color:skyblue;
-	                color:white;
+	                color:black;
 	                clear:both;
 	                text-align:center;
 	                padding:5px; 
-		        border-style: groove;
-		        border-color: aqua;
+		        border-style: groove;		        
 		        border-radius: 20px;
 	       }
 	</style>
@@ -61,8 +60,11 @@
                             <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                               <li class="submenu">
-				<a href=""> Conferences</a>
+                                   <li class="submenu">
+                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				   <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -102,7 +104,6 @@
 		  </div>
             </div> 
             </div>
-	    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
     <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
