--- a/SMPC-2019.html
+++ b/SMPC-2019.html
@@ -52,7 +52,10 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-				<a href=""> Conferences</a>
+                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -414,7 +417,6 @@
         addHandler(down2,"mouseout",()=>down2.style.border="");
         window.sr = ScrollReveal().reveal('#introdution,#speaker,#contents,#button');
     </script>
-    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
     <script type="text/javascript">
          function googleTranslateElementInit() {
          new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
