--- a/courses.html
+++ b/courses.html
@@ -35,48 +35,44 @@
 		}
 	#section1 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
 /* 		margin-top: 30px; */
 	}
 	#section2 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
 	}
 	#footer1 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
 	}
 	#footer2 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-		border-color: aqua;
 		border-radius: 20px;
 		margin-top: 10px;
 	}
@@ -104,7 +100,10 @@
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
                                 <li class="submenu">
-				<a href=""> Conferences</a>
+                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                </li>
+                                <li class="submenu">
+				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
@@ -156,8 +155,7 @@
 <!-- 			    <hr> -->
 		    <div id="footer2">
                 <p style="text-indent:2em ">Online Training Courses: ruizhian, Email: ruizhian (#) hotmail (dot) com. <br/> 
-		    </div>
-		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
+		    </div>		   
         </div>
 <script type="text/javascript">
 function googleTranslateElementInit() {
