--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="Conferences.html">Conferences</a>
+				<a href="Conference.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
