--- a/Conference.html
+++ b/Conference.html
@@ -35,48 +35,47 @@
 		}
 	#section1 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
-		border-style: groove;
-		border-color: aqua;
+		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
 /* 		margin-top: 30px; */
 	}
 	#section2 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-		border-color: aqua;
+/* 		border-color: aqua; */
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
 	}
 	#footer1 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-		border-color: aqua;
+/* 		border-color: aqua; */
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
 	}
 	#footer2 {
 	        background-color:skyblue;
-	        color:white;
+	        color:black;
 	        clear:both;
 	        text-align:center;
 	        padding:5px; 
 		border-style: groove;
-		border-color: aqua;
+/* 		border-color: aqua; */
 		border-radius: 20px;
 		margin-top: 10px;
 	}
@@ -103,6 +102,9 @@
                            <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
+                                <li class="submenu">
+                                    <a href="News.html">News</a>
+                                </li>
                                 <li class="submenu">
 				<a href="Conference.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
@@ -156,8 +158,7 @@
 		    <!-- <hr> -->
 		    <div id="footer2">
 		                    <p style="text-indent:2em ">Online  <br/> 
-		    		    </div>
-		    		    <p style="text-align:center"><img  src="image/图层%201(1).png" style="width:40%; height:40%;" ><img src="image/FTG logo.jpg " style="width:40%; height:40%;"></a> <br/>
+		    		    </div>		    		    
 		            </div>
 		    <script type="text/javascript">
 		    function googleTranslateElementInit() {
