--- a/DP syllabus.html
+++ b/DP syllabus.html
@@ -98,11 +98,11 @@ date.setTime(date.getTime() - skew)
                            <ul class="nav navbar-nav navbar-center">
                                     <li><a href="index.html">
                                     <i class="fa fa-home fa-1x" aria-hidden="true"></i> DFSC</a></li>
-                                <li class="submenu">
-                                    <a href="https://github.com/ruizhian/TeamWeb/blob/master/News.html">News</a>
+                                    <li class="submenu">
+                                    <a href="News.html">News</a>
                                 </li>
                                 <li class="submenu">
-				<a href="https://github.com/ruizhian/TeamWeb/blob/master/Conferences.html">Conferences</a>
+				<a href="Conference.html">Conferences</a>
 				  <ul class="Conferences"><i><em></em></i>
 				         <li ><a href="SHDI Introduction.html">SHDI</a></li>
 					 <li ><a href="SMPC Introduction.html">SMPC</a></li>
