--- a/News.html
+++ b/News.html
@@ -42,6 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
+		border-color: skyblue;
 /* 		margin-top: 30px; */
 	}
 	#section2 {
@@ -54,6 +55,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
+		border-color: skyblue;
 	}
 	#footer1 {
 	        background-color:skyblue;
@@ -65,6 +67,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
+		border-color: skyblue;
 	}
 	#footer2 {
 	        background-color:skyblue;
@@ -75,6 +78,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
+		border-color: skyblue;
 	}
 	</style>
 </head>
