--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <div id = "introdution">
                         <div class="introdution">
                             <div id="theme">
-            		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px; margin: 10px 50px;></a> <br/>
-                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
-                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;</p>
+            		<p style="text-align:center"><img  src="image/DFSC CENTERlogo.png " style="width:50%; height:50%;" height:200px;></a> <br/>
+                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
+                               <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/>
                                 <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
             <!--                      <hr> -->
             			<div id="section">
