--- a/News.html
+++ b/News.html
@@ -85,7 +85,7 @@
 </head>
     
      
-<body background="image/5c87cd000dcef(1).jpg">
+<body background="https://img0.baidu.com/it/u=1164931058,1532660197&fm=26&fmt=auto&gp=0.jpg">
     <div >
         <div id="head">
             <header style="min-height: 76px;">
