--- a/News.html
+++ b/News.html
@@ -85,7 +85,7 @@
 </head>
     
      
-<body background="image/5c87cd000dcef(1).jpg">
+<body background: url(image/5c87cd000dcef(1).jpg) no-repeat;>
     <div >
         <div id="head">
             <header style="min-height: 76px;">
