--- a/News.html
+++ b/News.html
@@ -58,7 +58,7 @@
 		border-color: skyblue;
 	}
 	#footer1 {
-	        background-color:purple;
+	        background-color:plum;
 	        color:black;
 	        clear:both;
 	        text-align:center;
@@ -70,7 +70,7 @@
 		border-color: skyblue;
 	}
 	#footer2 {
-	        background-color:purple;
+	        background-color:plum;
 	        color:black;
 	        clear:both;
 	        text-align:center;
