--- a/courses.html
+++ b/courses.html
@@ -42,7 +42,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		text-align: justify;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
 	}
 	#section2 {
@@ -55,7 +55,7 @@
 		border-radius: 20px;
 		margin-top: 10px;
 		text-align: justify;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 	}
 	#footer1 {
 	        background-color:gainsboro;
@@ -66,7 +66,7 @@
 		border-style: groove;		
 		border-radius: 20px;
 		margin-top: 10px;
-		border-color:skyblue;
+/* 		border-color:skyblue; */
 		text-align: justify;
 	}
 	#footer2 {
@@ -77,7 +77,7 @@
 	        padding:5px; 
 		border-style: groove;
 		border-radius: 20px;
-		border-color: skyblue;
+/* 		border-color: skyblue; */
 		margin-top: 10px;
 		text-align: justify;
 	}
