--- a/Conference.html
+++ b/Conference.html
@@ -33,7 +33,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#section1 {
+	.section1 {
 	        background-color:aliceblue;	     
 	        color:black;
 	        clear:both;
@@ -45,7 +45,7 @@
 /* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
 	}
-	#section2 {
+	.section2 {
 	        background-color:aliceblue;
 	        color:black;
 	        clear:both;
@@ -57,7 +57,7 @@
 		margin-top: 10px;
 		text-align: justify;
 	}
-	#footer1 {
+	.footer1 {
 	        background-color:aliceblue;
 	        color:black;
 	        clear:both;
@@ -68,7 +68,7 @@
 		margin-top: 10px;
 		text-align: justify;
 	}
-	#footer2 {
+	.footer2 {
 	        background-color:aliceblue;
 	        color:black;
 	        clear:both;
@@ -80,6 +80,9 @@
 		margin-top: 10px;
 		text-align: justify;
 	}
+	.removeborder{ 
+		border: none
+		}
 	</style>
 </head>
     
@@ -136,11 +139,11 @@
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">Conferences</p>
 <!--                      <hr> -->
-		     <!-- <div id="section1">
+		     <!-- <div class="section1 removeborder">
                     <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
 		    <!-- </div> -->
 			<!-- <hr> -->
-		    <div id="section2">
+		    <div class="section2 removeborder">
                     <p style="text-align: center;font-size: 20px"><!-- The --> </p>
                     <p style="text-indent:2em ">*Fully <br/>
                     <p style="text-indent:2em ">*Lattice-based <br/>
@@ -148,7 +151,7 @@
                     <p style="text-indent:2em ">*AI and Security <br/>
 		    </div>
 			    <hr>
-		    <div id="footer1">
+		    <div class="footer1 removeborder">
                     <p style="text-align: center;font-size: 20px"><!-- The --></p> 
                     <p style="text-indent:2em ">*Differential Privacy <br/> 
                     <p style="text-indent:2em ">*Secure Computation <br/>
@@ -157,7 +160,7 @@
                     <p style="text-indent:2em ">*Trusted Computing<br/> 
 		    </div>
 		    <!-- <hr> -->
-		    <div id="footer2">
+		    <div class="footer2 removeborder">
 		                    <p style="text-indent:2em ">Online  <br/> 
 		    		    </div>		    		    
 		            </div>
