--- a/News.html
+++ b/News.html
@@ -33,7 +33,7 @@
 	.navbar-collapse li:hover ul{
 			display:block;
 		}
-	#section1 {
+	.section1 {
 	        background-color:snow;
 	        color:black;
 	        clear:both;
@@ -45,7 +45,7 @@
 /* 		border-color: skyblue; */
 /* 		margin-top: 30px; */
 	}
-	#section2 {
+	.section2 {
 	        background-color:snow;
 	        color:black;
 	        clear:both;
@@ -57,7 +57,7 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 	}
-	#footer1 {
+	.footer1 {
 	        background-color:snow;
 	        color:black;
 	        clear:both;
@@ -69,7 +69,7 @@
 		text-align: justify;
 /* 		border-color: skyblue; */
 	}
-	#footer2 {
+	.footer2 {
 	        background-color:snow;
 	        color:black;
 	        clear:both;
@@ -81,6 +81,9 @@
 /* 		border-color: skyblue; */
 		texte-align: justify;
 	}
+	.removeborder{ 
+		border: none
+		}
 	</style>
 </head>
     
@@ -141,7 +144,7 @@
                     <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
 		    <!-- </div> -->
 			<!-- <hr> -->
-		    <div id="section2">
+		    <div class="section2 removeborder">
                     <p style="text-align: center;font-size: 20px"><!-- The --> </p>
                     <p style="text-indent:2em ">*Fully <br/>
                     <p style="text-indent:2em ">*Lattice-based <br/>
@@ -149,7 +152,7 @@
                     <p style="text-indent:2em ">*AI and Security <br/>
 		    </div>
 			    <hr>
-		    <div id="footer1">
+		    <div class="footer1 removeborder">
                     <p style="text-align: center;font-size: 20px"><!-- The --></p> 
                     <p style="text-indent:2em ">*Differential Privacy <br/> 
                     <p style="text-indent:2em ">*Secure Computation <br/>
@@ -158,7 +161,7 @@
                     <p style="text-indent:2em ">*Trusted Computing<br/> 
 		    </div>
 		    <!-- <hr> -->
-		    <div id="footer2">
+		    <div class="footer2 removeborder">
 		                    <p style="text-indent:2em ">Online  <br/> 
 		    		    </div>
 		            </div>
