--- a/News.html
+++ b/News.html
@@ -140,7 +140,7 @@
                 <div id="theme">
                     <p style="text-align: center;font-size: 20px">News</p>
 <!--                      <hr> -->
-		     <!-- <div id="section1">
+		     <!-- <div class="section1 removeborder">
                     <!-- <p style="text-indent:2em ">We also provide online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Secure Multi-party Computation，Hardware and Sotware Implementation of Crypto, Difference of Privacy, AI and IoT etc. <br/> -->
 		    <!-- </div> -->
 			<!-- <hr> -->
