--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			display:block;
 			display: -ms-flexbox;
 		}
-	 #section {
+	 .section {
 		 background-color:skyblue;
 	         color:black;
 	         clear:both;
@@ -45,7 +45,7 @@
 	         margin-bottom: 30px;
 		 text-align: justify;
 	}
-	#footer {
+	.footer {
 	    background-color:skyblue;
 	    color:black;
 	    clear:both;
@@ -60,6 +60,9 @@
 	.induc{
 		color:  skyblue;
 	} 
+	.removeborder{ 
+		border: none
+		}
 	</style>
 </head>
     
@@ -119,13 +122,13 @@
                                <p style="text-align: center;" >&nbsp; &nbsp; &nbsp; &nbsp;<br/> -->
                                 <p style="text-align: center;font-size: 20px"><a href="Member Lin.html">Dr. Linzhi Jiang, University of Surrey</a></p>
             <!--                      <hr> -->
-            			<div id="section">
+            			<div class="section removeborder">
                                 <p style="text-indent:2em ">The Development Institute of Digital Future (DFSC) is an innovative research institute, which is engaged in research of information science, and dedicates to information storage, processing and security in the future. We have invited a group of professors and researchers in information science to join DFSC.<br/>
                                 <p style="text-indent:2em ">Since the establishment of DFSC, we have initiated and organized a series of conferences in information science including: <a href="SHDI Introduction.html">SHDI Symposium,</a> <a href="SMPC Introduction.html">SMPC Symposium,</a> <a href="QPQC Introduction.html">QPQC Symposium,</a> <a href="CSAC Introduction.html">CSAC Symposium</a> and <a href="CC Introduction.html">CC Symposium</a>. DFSC has been built a series of co-operations with Universities/Colleges/Schools and Enterprises.<br/>
                                 <p style="text-indent:2em ">We also provide <a href="courses.html">online training courses</a> including Fully Homomorphic Encryption, Lattice-based Cryptography, Difference of Privacy, Secure Multi-party Computation, AI and IoT etc. <br/>
             			</div>
             <!--                     <hr> -->
-                                <div id="footer">
+                                <div class="footer removeborder">
                                 <p style="text-indent:2em ">Conferences Sponsors: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
                                 <p style="text-indent:2em ">Research Cooperation: ruizhian, Email: ruizhian (#) hotmail (dot) com.<br/>
             			</div>
